Fixes #4012 by relocating overflow:auto to a new wrapper div

--- a/app/assets/stylesheets/sections/collection.scss
+++ b/app/assets/stylesheets/sections/collection.scss
@@ -414,6 +414,9 @@
 
 
 // Collection settings
+.collection-meta-wrapper {
+  overflow: auto;
+}
 
 .collection-works-manage {
   .action {
